2014-10-01  Jake Nielsen  <jacob_nielsen@apple.com>

        commitqueuetasks_unittest references a non-existent member variable
        when mock-reporting flaky tests.
        https://bugs.webkit.org/show_bug.cgi?id=137303

        Reviewed by Daniel Bates.

        * Scripts/webkitpy/tool/bot/commitqueuetask_unittest.py:
        (MockCommitQueue.report_flaky_tests):
        Makes the appropriate name change.
        (test_simple_flaky_test_failure):
        Adds a unit test to make sure that the code is excercised.

2014-10-01  Jake Nielsen  <jacob_nielsen@apple.com>

        EWS is inconclusively spinning forever on a patch that breaks 500+
        tests
        https://bugs.webkit.org/show_bug.cgi?id=137223

        Reviewed by Tim Horton.

        * Scripts/webkitpy/tool/bot/patchanalysistask.py:
        Checks to see whether the tests have exceeded the failure limit, and
        only spins off another test if they have not exceeded the limit.
        (PatchAnalysisTask._test_patch):

2014-10-01  Brian J. Burg  <burg@cs.washington.edu>

        Unreviewed, add Katie Madonna as a contributor.

        * Scripts/webkitpy/common/config/contributors.json:

2014-10-01  Jake Nielsen  <jacob_nielsen@apple.com>

        commitqueuetasks_unittest does not construct FailingTestCommitQueue
        objects properly in its test cases.
        https://bugs.webkit.org/show_bug.cgi?id=137281

        Reviewed by Daniel Bates.

        * Scripts/webkitpy/tool/bot/commitqueuetask_unittest.py:
        (FailingTestCommitQueue.test_results):
        Adds an assert to make FailingTestCommitQueue harder to mis-use.
        (test_double_flaky_test_failure):
        Nests the intended test failure strings into one-length lists.
        (test_red_test_failure):
        Nests the intended test failure strings into one-length lists.

2014-10-01  Alexey Proskuryakov  <ap@apple.com>

        REGRESSION (r172172): Multiple regression tests fail when primary system language is Russian